[package]
name = "rcarc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfj = { version = "0.6", features = ["robocraft", "simple"] }

clap = { version = "3.0", features = ["derive"] }
rusqlite = { version = "0.28" }

threadpool = { version = "1.8" }
ureq = { version = "2.5" }
